--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "history": "4.7.2",
     "live-server": "^1.2.0",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
