--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "normalize.css": "7.0.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
-    "react-modal": "2.2.2",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "validator": "8.0.0",
